<TinUI, a modern frame to render various widgets element for tkinter in one control.>
    Copyright (C) <2021-present>  <Smart-Space | Junming Zhang> <tsan-zane@outlook.com>
    2019（原型框架）2021（正式命名TinUI发布）

==========更新日志==========


==========4.5==========
2023-11-12
1. 修复treeview调试错误

==========4.4==========
2023-3-11
1. 新增密码输入框 passwordbox

==========4.3==========
2023-2-2
1. 优化帮助手册
2. 优化ratingbar, onoff外观
3. 优化spinbox外观，更新spinbox示例
4. 修复treeview的一个展开错误
5. 新增滑动控件 swipecontrol

==========4.2==========
2023-1-21
1. 更改image计算精度
2. listbox添加add、delete方法
3. ratingbar只选择一个星且再次选择第一个时，取消选择，返回0
4. 修复button2无法返回边框元素的错误
5. 修复radiobox示例中的错误
6. 添加状态开关按钮 togglebutton

==========4.1==========
2023-1-9
1. 优化 TinUI帮助手册
2. 添加pipspager切换动画
3. 修复treeview展开和闭合后触发选定的问题

==========4.0==========
2023-1-1
1. 优化radiobox效果
2. 修复listview返回元素不全的问题
3. 新增树状图 treeview
4. 使用TinUI LOGO.ico
5. 新增普通图片 image
6. 随包发布 TinUI帮助手册 实用程序，在\test目录下
7. 优化复选框标识符

==========3.34==========
2022-10-22
1. 新增列表视图 listview
2. 更新样式
3. TinUI支持直接横向滚动
4. 破坏性，tooltip返回值改为函数get_return，节省窗口资源

==========3.33==========
2022-10-4
1. 新增元素等待框 waitframe

==========3.32==========
2022-9-17
1. 感谢TotoWang-hhh（github）提交的自动识别windows系统深浅色模式样式
2. window.py添加快速翻页功能，方便样式theme开发者展示

==========3.31==========
2022-9-9
1. onoff移动动画
2. 创建TinUIWidget类，用来显示单个元素控件
3. 修改expander, notebook, notecard的圆角
4. back边框圆角

==========3.30==========
2022-8-27
1. tooltip新增delay参数，允许延时显示
2. textbox添加相关方法
3. 网站同步changelog
4. TinUIXml添加environment方法，用以快速导入funcs和datas
5. onoff重写，采用新样式，增加相关方法
6. scrollbar样式对称，不使用时保持静默状态

==========3.24==========
2022-8-20
1. 修复横向scrollbar最大值滚动问题
2. 更新pipspager标识符样式
3. 修复pipspager向左越界移动的问题
4. 版权更新
5. 添加此文件

==========3.23==========
2022-8-13
1. 增加entry方法
2. 增加entry测试文件
3. 更新ratingbar功能
4. link控件如果接受一个超链接，则显示链接地址
5. info/tooltip指定文本宽度

==========3.22==========
2022-8-6
1. 新增可折叠UI元素控件 expander

==========3.21==========
2022-7-30
1. 修复若干问题
2. 优化menu首次点击明显位移问题

==========3.20==========
2022-7-24
1. 防止三种waitbar元素名称重合